Use Byte#valueOf instead of constructor
- The constructor circumvents the cache for Bytes.
- The constructor is deprecated since Java 9.